Submitting latest versions of the results.